--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'Nunito Sans';
+  src: url('../font/NunitoSans_10pt-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Nunito Sans', sans-serif;
+}
+
 html {
   scroll-behavior: smooth;
 }
