--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: '印品鸿蒙体';
-  src: url('../font/yinpin_hongmengti.ttf') format('truetype');
+  src: url('../font/ja-jp.ttf') format('truetype');
   font-weight: normal !important;
   font-style: normal;
 }
