--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,3 +117,17 @@ background: rgb(42, 42, 111);
 #backToTopBtn:hover {
   opacity: 1;
 }
+.card-kelas{
+  height: 400px;
+}
+
+@media (max-width: 425px) {
+  .card-kelas{
+    height: 200px;
+  }
+  }
+  @media (max-width: 769px) {
+    .card-kelas{
+      height: 350px;
+    }
+    }
